...
                            append("S'inscrire")
                        }
                    },
                    fontSize = 14.sp,
                    color = Gray,
                    modifier = Modifier
                        .testTag("go_to_register")
                        .clickable { onNavigateToRegister() }
                )
            }
        }
    }
}
